# linkedin_learning

./: .clang-format  README.md
c++_essential_training/: CMakeLists.txt  Makefile
c++_essential_training/inventory/: item.txt
c++_essential_training/src/: file_transform_challenge.cpp  library_catalog_card.cpp  nonmember_operators_challenge.cpp  nonrecurisve_factorial_challange.cpp  nonrecursive_factorial_template_challenge.cpp  prime_number_challenge.cpp
c++_essnetial_training/: CMakeLists.txt
c++_essnetial_training/src/: library_catalog_card.cpp
